k8s/urls-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urls-service
  namespace: urls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urls-service
  template:
    metadata:
      labels:
        app: urls-service
    spec:
      containers:
        - name: urls-service
          image: urls-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: urls-service
  namespace: urls
spec:
  selector:
    app: urls-service
  ports:
    - port: 9091
